<resources>
    <string name="appname"> AቡጊDa</string>
    <string name="title"> AቡጊDa dictionary</string>
    <string name="button"> search</string>
    <string name="abtus"> Aboutdev`s</string>
    <string name="dev1"> Kidus Wegayehu</string>
    <string name="dev2"> Bonsa Bojor</string>
    <string name="dev3"> Surafel Destaw</string>
    <string name="dev4"> Abel Tesfahun</string>
</resources>