<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/dev4"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintVertical_bias="0.214"
        tools:ignore="TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="155dp" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="40dp"
        android:ems="10"

        android:inputType="textPersonName"
        android:text="@string/dev2"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/dev3"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/dev1"
        tools:ignore="TouchTargetSizeCheck" />


</RelativeLayout>